--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+ChemAlgebra = "a20ab55d-8ed9-4713-9dce-23ab55040318"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+LibJuInt = "1062b60e-e2b6-4d91-9988-007d75dc44fc"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaps = "7a12625a-238d-50fd-b39a-03d52299707e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -15,8 +17,10 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 BenchmarkTools = "1.6.3"
+ChemAlgebra = "0.1.0"
 Combinatorics = "1.0.3"
 Dates = "1.11.0"
+LibJuInt = "0.1.0"
 LinearAlgebra = "1.12.0"
 LinearMaps = "3.11.4"
 Printf = "1.11.0"
